# student-col

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Student_collaboration/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_board_online_users.py  0003_profile.py  0004_profile_about.py  0005_remove_profile_about_remove_profile_avatar.py  0006_profile_avatar.py  0007_profile_about.py
main/templates/main/: edit_profile.html  home.html  landing.html  login.html  profile.html  register.html  whiteboard.html
static/web/: index.js  index.js.map
templates/: index.html  navbar.html
web/: dump.rdb  package-lock.json  package.json  requirements.txt
web/.parcel-cache/: 137ef0fb0bed76e5-0  3ab5d7c24dbb9766-0  3bf7fa273b0cb490-0  631f48bf12bcbd41-0  6cffd652b49cdb2e.txt  7434f5028bf60799.txt  a3cbb1ab10b5ff9e-0  a4e45b47252c8918-0  ad3781821da5b746-0  b05d98561a6ea5ce.txt  data.mdb  e8e18f315f3cab53-0  f09256245763e2b8-0  lock.mdb
web/src/: index.ts
